extensions/ArchLinux: fix Vector header on small screens
Unset `min-width` to that the main menu is visible and the user menu
is inside the viewport.

--- a/extensions/ArchLinux/modules/skins/vector.less
+++ b/extensions/ArchLinux/modules/skins/vector.less
@@ -102,6 +102,11 @@ body.skin-vector-2022 {
     background-color: @body-background-color;
   }
 
+  // Show the main menu and user menu in the visible area
+  .vector-header {
+    min-width: unset;
+  }
+
   // Match the font used in page title
   .vector-sticky-header-context-bar-primary {
     font-family: sans-serif;
